Refactored some code to remove inefficiencies detected by FindBugs.